--- a/.github/workflows/androidDebug.yml
+++ b/.github/workflows/androidDebug.yml
@@ -11,7 +11,8 @@ jobs:
       - name: Set up JDK 1.8
         uses: actions/setup-java@v3
         with:
-          java-version: 1.8
+          distribution: 'temurin'
+          java-version: 11
           cache: 'gradle'
         
       - name: Run debug build with Gradel Wrapper
