--- a/.github/workflows/androidDebug.yml
+++ b/.github/workflows/androidDebug.yml
@@ -18,7 +18,10 @@ jobs:
       - name: Install dependencies
         run: yarn install --frozen-lockfile
         
-      - name: Run debug build with Gradel Wrapper
+      - name: Bundle app
+        run: react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android --assets-dest android/app/src/main/res
+        
+      - name: Run debug build with Gradle Wrapper
         run: cd android && ./gradlew assembleDebug
         
       - name: Upload build artifact
