--- a/.github/workflows/androidRelease.yml
+++ b/.github/workflows/androidRelease.yml
@@ -25,4 +25,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: Signed App Bundle
-          path: ${{steps.sign_app.outputs.signedReleaseFile}}
+          path: android/app/build/outputs/bundle/release/app-release.aab
