--- a/.github/workflows/androidRelease.yml
+++ b/.github/workflows/androidRelease.yml
@@ -7,9 +7,10 @@ jobs:
     steps:
       - name: Decode Keystore
         env:
-            ENCODED_STRING: ${{ secrets.ANDROID_SIGNINGKEYBASE64 }}
+          ENCODED_STRING: ${{ secrets.ANDROID_SIGNINGKEYBASE64 }}
         run: |
-            echo $ENCODED_STRING | base64 -di > "${RUNNER_TEMP}"/RN-TEST-APP-RELEASE-KEY.keystore
+          echo $ENCODED_STRING > keystore-b64.txt
+          base64 -d keystore-b64.txt > RN-TEST-APP-RELEASE-KEY.keystore
 
       - name: Checkout
         uses: actions/checkout@v3
