--- a/.github/workflows/androidRelease.yml
+++ b/.github/workflows/androidRelease.yml
@@ -5,12 +5,6 @@ jobs:
   Android-Signed:
     runs-on: ubuntu-latest
     steps:
-      - name: Decode Keystore
-        env:
-          ENCODED_STRING: ${{ secrets.ANDROID_SIGNINGKEYBASE64 }}
-        run: |
-          echo $ENCODED_STRING > keystore-b64.txt
-          base64 -d keystore-b64.txt > RN-TEST-APP-RELEASE-KEY.keystore
 
       - name: Checkout
         uses: actions/checkout@v3
@@ -24,6 +18,13 @@ jobs:
       
       - name: Install dependencies
         run: yarn install --frozen-lockfile
+
+      - name: Decode Keystore
+        env:
+          ENCODED_STRING: ${{ secrets.ANDROID_SIGNINGKEYBASE64 }}
+        run: |
+          echo $ENCODED_STRING > keystore-b64.txt
+          base64 -d keystore-b64.txt > react-native-cli-test/react-native-cli-test/android/app/RN-TEST-APP-RELEASE-KEY.keystore
         
       - name: Build release AAB
         run: cd android && ./gradlew bundleRelease
