--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -94,9 +94,9 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
-    namespace "com.reactnativetest"
+    namespace "io.ionic.rnvanillatest"
     defaultConfig {
-        applicationId "com.reactnativetest"
+        applicationId "io.ionic.rnvanillatest"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
