--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@trapezedev/configure": "^7.0.10",
     "react": "18.2.0",
     "react-native": "0.71.8"
   },
